Fix visual bug (misaligned tables)
Remove global style that seemed to be entirely accidental

Issue: THLDTKK-785

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -318,10 +318,6 @@ h3 {
 
 /* Table format of e.g. the variable table in catalog  */
 
-.table {
-    margin-left: 10px;
-}
-
 .data-table-plain {
     margin-top: 2em;
     border: none;
